plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.0.1.5171"
}

group = 'com.cloudbalance'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

compileJava {
	options.compilerArgs += ['-parameters']
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.security:spring-security-core'
	implementation 'org.springframework.security:spring-security-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.4'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	runtimeOnly 'com.mysql:mysql-connector-j'
	compileOnly 'org.projectlombok:lombok:1.18.34'
	annotationProcessor 'org.projectlombok:lombok:1.18.34'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'software.amazon.awssdk:s3:2.31.13'
	implementation 'software.amazon.awssdk:sts:2.31.13'
	implementation 'software.amazon.awssdk:rds:2.31.13'
	implementation 'software.amazon.awssdk:ec2:2.31.13'
	implementation 'software.amazon.awssdk:autoscaling:2.31.13'
	implementation 'net.snowflake:snowflake-jdbc:3.23.1'
	implementation 'org.yaml:snakeyaml:2.0'
	testImplementation 'org.mockito:mockito-core:5.15.2'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
	implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:7.6.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
